instancias dos arrays e pivo no  else e getFirst
Modificação do escopo onde são instanciados os arrays e o pivô. Assim
como susbstituido o uso do metodo get(0) por getFirst() no array da
linha 14.